solved horizontal scrollbar appearance

--- a/blocks/body/feedback/feedback.css
+++ b/blocks/body/feedback/feedback.css
@@ -14,7 +14,8 @@
 .new-feedback.row{
     background-color: rgb(243, 243, 243);
     padding: 0;
-
+    margin-right: 0;
+    margin-left: 0;
 }
 
 .client-say{
